SASS support and code clean-up

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ markdown: redcarpet
 baseurl: /visual-style-guide
 exclude: ['README.md']
 permalink: /:categories/:title
+sass:
+    sass_dir: _includes/_sass
